--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "babel-preset-es2015": "^6.22.0",
     "eventbusjs": "^0.1.0",
     "gulp-uglify": "^2.0.0",
+    "leaflet": "^1.3.4",
+    "leaflet.locatecontrol": "^0.62.0",
     "leaflet.markercluster": "^1.0.4",
     "leaflet.vectorgrid": "^1.2.0",
     "masonry-layout": "^4.1.1",
@@ -23,6 +25,7 @@
     "react-masonry-component": "^4.4.0",
     "react-packery-component": "^1.0.2",
     "react-router": "^3.0.0",
+    "route-parser": "0.0.5",
     "turf-inside": "^3.0.12",
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
